utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/NameFormatIDE.ide
package valid

ide NameFormatIDE {
    registry "https://hub.docker.com/some/awesome/image:latest"
    build "some/amazing/path" resolved from ROOT
}
