utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencyParentIDE.ide
package invalid

ide CircularDependencyParentIDE extends CircularDependencyIDE {
    registry "https://hub.docker.com/some/awesome/image:latest"
    build "some/amazing/path" resolved from ROOT
}
